manifests/opensearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch
  namespace: opensearch
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - opensearch.internal.elijah.fyi
  rules:
    - host: opensearch.internal.elijah.fyi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: burns-dashboards
                port:
                  name: http
